--- a/MyGame.Desktop.csproj
+++ b/MyGame.Desktop.csproj
@@ -37,9 +37,7 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
-    <Compile Include="Game1.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="cs\**" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
