--- a/MyGame.Desktop.csproj
+++ b/MyGame.Desktop.csproj
@@ -51,7 +51,7 @@
     <EmbeddedResource Include="Icon.bmp" />
   </ItemGroup>
   <ItemGroup>
-    <MonoGameContentReference Include="Content\**" />
+    <MonoGameContentReference Include="Content\*.mgcb" />
     <None Include="app.manifest" />
     <None Include="$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\x86\SDL2.dll">
       <Link>x86\SDL2.dll</Link>
