--- a/MyGame.Desktop.csproj
+++ b/MyGame.Desktop.csproj
@@ -37,7 +37,8 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="cs\**" />
+<!-- Source code of CS files location -->
+    <Compile Include="**\*.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
@@ -51,7 +52,8 @@
     <EmbeddedResource Include="Icon.bmp" />
   </ItemGroup>
   <ItemGroup>
-    <MonoGameContentReference Include="Content\*.mgcb" />
+<!-- Content location -->
+    <MonoGameContentReference Include="**\*.mgcb" />
     <None Include="app.manifest" />
     <None Include="$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\x86\SDL2.dll">
       <Link>x86\SDL2.dll</Link>
